# PilotLearning

./: .gitignore  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/asset/global/: rendering.global.json
engine/asset/level/: 1-1.level.json
engine/asset/objects/_textures/: mr.dds  n.dds  silver.dds
engine/asset/objects/environment/_material/: temp.material.json
engine/asset/texture/default/: blue.tga  grey.tga  normal.dds  red.tga
engine/asset/texture/sky/: skybox_irradiance_X-.exr  skybox_specular_X-.exr
engine/shader/: CMakeLists.txt
engine/shader/hlsl/: ASComputeDirectIrradianceCS.hlsl  ASComputeIdirectIrradianceCS.hlsl  ASComputeMultipleScatteringCS.hlsl  ASComputeScatteringDensityCS.hlsl  ASComputeSingleScatteringCS.hlsl  ASComputeTransmittanceCS.hlsl  ATDefinitions.hlsl  ATDefinitions.hlsli  ATFunctions.hlsl  ATFunctions.hlsli  AdaptExposureCS.hlsl  AmbientOcclusion.hlsli  AtmosphericSkyProcedural.hlsl  AtmosphericSkyProcedural.shader  AtmosphericTexGen.compute  BSDF.hlsli  BilateralUpFilter.hlsl  ClipmapCullingForDirShadow.hlsl  ClipmapCullingForMainCamera.hlsl  CombineLighting.hlsl  CommonGetters.hlsli  CommonGraphics.hlsli  CommonMaterial.hlsli  CommonMath.hlsli  CommonShading.hlsli  CommonShadowing.hlsli  CommonTypes.hlsli  ComputeDirectIrradianceCS.hlsl  ComputeIdirectIrradianceCS.hlsl  ComputeMultipleScatteringCS.hlsl  ComputeScatteringDensityCS.hlsl  ComputeSingleScatteringCS.hlsl  ComputeTransmittanceCS.hlsl  DFGPrefilter.hlsl  DiffusionProfile.hlsli  FXAA.hlsli  FXAAToLuminanceCS.hlsl  GenerateMaxMipsLinearCS.hlsl  GenerateMaxMipsLinearOddCS.hlsl  GenerateMaxMipsLinearOddXCS.hlsl  (+88 more)
engine/shader/hlsl-----/: BSDF.hlsli  CommonGraphics.hlsli  DownsampleBloomCS.hlsl  GenerateHistogramCS.hlsl  IndirectDraw.hlsl  SharedTypes.hlsli
engine/shader/hlsl/RootSignature/: BindlessRS.hlsli
engine/shader/hlsl/ShaderInterlop/: ConstantBuffers.hlsli  D3D12Utils.hlsli  InterlopHeader.hlsli  RenderResources.hlsli
engine/shader/pipeline/Runtime/CustomInput/: CustomInput.hlsl
engine/shader/pipeline/Runtime/Lighting/: LightDefinition.hlsl  LightEvaluation.hlsl  Lighting.hlsl  SurfaceShading.hlsl
engine/shader/pipeline/Runtime/Material/: BuiltinGIUtilities.hlsl  BuiltinUtilities.hlsl  Material.hlsl  MaterialEvaluation.hlsl  MaterialGBufferMacros.hlsl  MaterialUtilities.hlsl  NormalBuffer.hlsl
engine/shader/pipeline/Runtime/ShaderLibrary/: ACES.hlsl  AreaLighting.hlsl  BSDF.hlsl  Color.hlsl  Common.hlsl  CommonLighting.hlsl  CommonMaterial.hlsl  EntityLighting.hlsl  Filtering.hlsl  GeometricTools.hlsl  ImageBasedLighting.hlsl  Macros.hlsl  NormalSurfaceGradient.hlsl  Packing.hlsl  PerPixelDisplacement.hlsl  Random.hlsl  ShaderVariables.hlsl  ShaderVariablesFunctions.hlsl  ShaderVariablesGlobal.hlsl  SpaceTransforms.hlsl  SphericalHarmonics.hlsl  VolumeRendering.hlsl
engine/shader/pipeline/Runtime/Tools/: IndirectCullForSort.hlsl
engine/source/editor/: CMakeLists.txt
engine/source/editor/include/: axis.h  editor.h  editor_file_service.h  editor_global_context.h  editor_input_manager.h  editor_scene_manager.h  editor_ui.h
engine/source/editor/resource/: MoYuEditor.rc
engine/source/editor/source/: axis.cpp  editor.cpp  editor_file_service.cpp  editor_global_context.cpp  editor_input_manager.cpp  editor_scene_manager.cpp  editor_ui.cpp  main.cpp
engine/source/meta_parser/: CMakeLists.txt
engine/source/meta_parser/parser/language_types/: class.cpp  field.cpp
engine/source/precompile/: precompile.cmake
engine/source/runtime/: CMakeLists.txt  engine.cpp  engine.h
engine/source/runtime/core/base/: macro.h  system_core.h  utility.cpp  utility.h
engine/source/runtime/core/color/: color.cpp  color.h
engine/source/runtime/core/log/: log_system.cpp  log_system.h
engine/source/runtime/core/math/: moyu_math.cpp  moyu_math.h  moyu_math2.cpp  moyu_math2.h  simple_math_custom.cpp  simple_math_custom.h  simple_math_custom.inl
engine/source/runtime/core/meta/: json.h  meta_example.h
engine/source/runtime/function/character/: character.cpp  character.h
engine/source/runtime/function/controller/: character_controller.cpp  character_controller.h
engine/source/runtime/function/framework2/: object_id_allocator.cpp  object_id_allocator.h
engine/source/runtime/function/global/: global_context.cpp  global_context.h
engine/source/runtime/function/input/: input_system.cpp  input_system.h
engine/source/runtime/function/render/: HaltonSequence.h  glm_wrapper.h  jitter_helper.cpp  jitter_helper.h  light.h  render_camera.cpp  render_camera.h  render_common.cpp  render_common.h  render_config.cpp  render_config.h  render_entity.h  render_guid_allocator.h  render_helper.cpp  render_helper.h  render_light.h  render_mesh.cpp  render_mesh.h  render_mesh_loader.cpp  render_mesh_loader.h  render_object.h  render_pass.cpp  render_pass.h  render_pass_base.cpp  render_pass_base.h  render_resource.cpp  render_resource.h  render_resource_base.cpp  render_resource_base.h  render_resource_loader.cpp  render_resource_loader.h  render_scene.cpp  render_scene.h  render_scenes.cpp  render_scenes.h  render_swap_context.cpp  render_swap_context.h  render_system.cpp  render_system.h  render_type.h  (+10 more)
engine/source/runtime/function/ui/: window_ui.cpp  window_ui.h
engine/source/runtime/platform/file_service/: binary_reader.cpp  binary_reader.h  binary_writer.cpp  binary_writer.h  file_service.h  file_stream.cpp  file_stream.h  file_system.cpp  file_system.h  memoryMappedFile.cpp  memoryMappedFile.h  memoryMappedView.cpp  memoryMappedView.h
engine/source/runtime/platform/path/: path.cpp  path.h
engine/source/runtime/platform/system/: delegate.h  hash.cpp  hash.h  stopwatch.cpp  stopwatch.h  system_core.h  systemtime.cpp  systemtime.h
engine/source/test/: CMakeLists.txt
engine/source/test/source/: main.cpp
engine/source/tools/: CMakeLists.txt
engine/source/tools/ibl/: CMakeLists.txt
engine/source/tools/iblprefilter/: CMakeLists.txt
engine/source/tools/image/: CMakeLists.txt
engine/source/tools/imageio/: CMakeLists.txt
(+461 files in other folders)
