set(TARGET_NAME Shaders)

file(GLOB_RECURSE O_SHADER_FILES CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/hlsl/*.hlsl ${CMAKE_CURRENT_SOURCE_DIR}/hlsl/*.hlsli)
file(GLOB_RECURSE N_SHADER_FILES CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/pipeline/*.hlsl ${CMAKE_CURRENT_SOURCE_DIR}/pipeline/*.hlsli)

source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES ${O_SHADER_FILES} ${N_SHADER_FILES})

add_library(${TARGET_NAME} INTERFACE ${O_SHADER_FILES} ${N_SHADER_FILES})

message(${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/pipeline)

set_target_properties(${TARGET_NAME} PROPERTIES FOLDER "Engine")
